# embeddb

./: .gitignore  AGENTS.md  CHANGELOG.md  CLONE_CONTEXT.md  CLONE_FEATURES.md  Cargo.toml  INCIDENTS.md  Makefile  PLAN.md  PRODUCT_ROADMAP.md  PROJECT_MEMORY.md  README.md  UPDATE.md
.github/workflows/: ci.yml
crates/embeddb/: Cargo.toml
crates/embeddb-cli/: Cargo.toml
crates/embeddb-cli/src/: main.rs
crates/embeddb-server/: Cargo.toml
crates/embeddb-server/src/: main.rs
crates/embeddb-server/src/ui/: app.js  index.html  styles.css
crates/embeddb/src/: lib.rs  schema.rs  tests.rs  vector.rs
crates/embeddb/src/storage/: mod.rs  sst.rs  wal.rs
docs/: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  HTTP.md  PLAN.md  PMF.md  PROJECT.md  RELEASE.md  ROADMAP.md  SECURITY.md  SELF_HOSTED_RUNNER.md  WORLD_STATE_2026.md
scripts/: ci_local_self_hosted.sh  ci_self_hosted_preflight.sh  http_console_smoke.sh  http_process_smoke.sh  install_gitleaks.sh  setup_self_hosted_runner.sh
