[workspace]
resolver = "2"
members = [
  "crates/embeddb",
  "crates/embeddb-cli",
  "crates/embeddb-server",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/sarveshkapre/embeddb"

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22"
axum = "0.7"
clap = { version = "4.5", features = ["derive"] }
crc32fast = "1.4"
fs2 = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.10"
thiserror = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
