[package]
name = "embeddb-cli"
version = "0.1.0"
description = "CLI for EmbedDB."
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
embeddb = { path = "../embeddb" }
