[package]
name = "embeddb-server"
version = "0.1.0"
description = "Optional HTTP server for EmbedDB."
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
axum = { workspace = true, optional = true }
embeddb = { path = "../embeddb" }
jsonschema = { version = "0.17", optional = true }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
http = ["dep:axum", "dep:tokio", "dep:tower-http"]
contract-tests = ["dep:jsonschema"]

[dev-dependencies]
tempfile.workspace = true
tower = { workspace = true, features = ["util"] }
