[package]
name = "embeddb"
version = "0.1.0"
description = "Rust embedded database with WAL + LSM and automatic per-row embeddings for local-first vector search."
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
crc32fast.workspace = true
fs2.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
